进一步优化记忆系统结构，采用Outbox Pattern实现数据库双写策略